--- a/metav/scss/style.scss
+++ b/metav/scss/style.scss
@@ -6,11 +6,15 @@ body {
     background-color: #000;
     color: #fff;
     font-family: "Poppins", sans-serif;
+    overflow-x: hidden;
+   
 }
 
 .wrapper {
     overflow: clip;
     min-height: 100vh;
+    width: 100vw;
+
 }
 
 [class*="__container"] {
@@ -18,18 +22,29 @@ body {
     padding: 0 toRem(15);
     margin: 0 auto;
     border: 1px solid #fff;
+    
 }
 
 .header {
+    &__decor {
+        background: radial-gradient(40.5% 39.56% at 50% 50%, rgba(170, 20, 240, 0.28), rgba(170, 20, 240, 0) 100%);
+        width: 56rem;
+        height: 56rem;
+        position: absolute;
+        z-index: -1;
+        left: toRem(420);
+        transform: translateY(toRem(-450));
+    }
     // .header__container
     margin-top: toRem(45);
     margin-bottom: clamp(1.25rem, 0.159rem + 5.45vw, 4.25rem);
     position: relative;
-    z-index: 999;
+    
     &__container {
         display: flex;
         justify-content: space-between;
         align-items: center;
+        position: relative;
         @media (max-width: toRem(640)) {
             justify-content: space-around;
         }
@@ -138,12 +153,23 @@ body {
 .header__nav.active nav {
     transform: translateX(0);
 }
+.main__decor {
+    background: radial-gradient(40.5% 39.56% at 50% 50%, rgba(170, 20, 240, 0.28), rgba(170, 20, 240, 0) 100%);
+    width: 56rem;
+    height: 56rem;
+    position: absolute;
+    z-index: -1;
+    transform: translate(toRem(300), toRem(-100));
+    top: 0;
+    right: 0;
+}
 
 .page-home {
     margin-bottom: clamp(3.125rem, -0.284rem + 17.05vw, 12.5rem);
     position: relative;
     display: flex;
     width: 100%;
+    z-index: 100;
     @media (max-width: toRem(1017)) {
         flex-direction: column;
         row-gap: toRem(20);
@@ -186,6 +212,8 @@ body {
         column-gap: toRem(16);
         align-items: center;
         margin-bottom: toRem(40);
+        position: relative;
+        z-index: 100;
         @media (max-width: toRem(1017)) {
             justify-content: center;
         }
@@ -194,19 +222,50 @@ body {
     // .page-home__first-button
 
     &__first-button {
+        position: relative;
+        z-index: 100;
         a {
             font-family: "Poppins", sans-serif;
             font-weight: 500;
             font-size: clamp(1.125rem, 1.05rem + 0.27vw, 1.25rem);
-            background: linear-gradient(158deg, #d10ed1 0%, #10a3da 100%);
+            position: relative;
             border-radius: 5px;
             padding: toRem(16) toRem(29);
+
+            &:after {
+                content: "";
+                position: absolute;
+                background: linear-gradient(158deg, #d10ed1 0%, #10a3da 100%);
+                width: 100%;
+                height: 100%;
+                inset: 0;
+                z-index: -1;
+                transition: all 0.5s;
+                border-radius: 5px;
+            }
+            &:before {
+                content: "";
+                position: absolute;
+                background: linear-gradient(158deg, #b12b6a 0%, #3ec955 100%);
+                width: 100%;
+                height: 100%;
+                inset: 0;
+                z-index: -2;
+                border-radius: 5px;
+            }
+            &:hover {
+                &:after {
+                    opacity: 0;
+                }
+            }
         }
     }
 
     // .page-home__second-button
 
     &__second-button {
+        position: relative;
+        z-index: 100;
         a {
             font-family: "Poppins", sans-serif;
             font-weight: 500;
@@ -214,6 +273,10 @@ body {
             border-radius: 5px;
             padding: toRem(14) toRem(29);
             border: 2px solid #d10ed1;
+            transition: all 0.5s;
+            &:hover {
+                border: 2px solid #c99d3e;
+            }
         }
     }
 
@@ -293,19 +356,25 @@ body {
     // .page-about__left-content
     display: flex;
     justify-content: space-between;
+    position: relative;
     gap: toRem(50);
     margin-bottom: clamp(2.813rem, -0.9rem + 13.2vw, 9rem);
     @media (max-width: toRem(991)) {
         flex-direction: column;
     }
-
-    &__left-content {
+    &__decor {
+        background: radial-gradient(40.5% 39.56% at 50% 50%, rgba(170, 20, 240, 0.28), rgba(170, 20, 240, 0) 100%);
+        width: 56rem;
+        height: 56rem;
+        position: absolute;
+        z-index: -1;
+        bottom: 0;
+        right: 0;
     }
-
     // .page-about__img
-
     &__img {
         display: flex;
+        position: relative;
     }
 
     // .page-about__frist-img
@@ -313,11 +382,17 @@ body {
     &__frist-img {
         width: 100%;
         height: 100%;
+        position: relative;
+        z-index: 2;
         img {
             border-bottom-left-radius: toRem(65);
             border-top-right-radius: toRem(65);
             width: 100%;
             height: 100%;
+            aspect-ratio: 282/297;
+            object-fit: cover;
+            position: relative;
+            z-index: 5;
         }
     }
 
@@ -326,15 +401,20 @@ body {
     &__second-img {
         width: 100%;
         height: 100%;
+        position: relative;
+
         img {
-            width: 100%;
-            height: 100%;
             border-bottom-right-radius: toRem(65);
             border-top-left-radius: toRem(65);
+            position: relative;
+            aspect-ratio: 282/297;
+
+            z-index: 2;
         }
-        padding-top: toRem(123);
+        margin-top: toRem(123);
         margin-left: toRem(-56);
-        position: relative;
+
+        z-index: 100;
     }
 
     // .page-about__right-content
@@ -353,6 +433,7 @@ body {
         font-family: "Orbitron", sans-serif;
         font-weight: 600;
         font-size: clamp(1.563rem, 1.335rem + 1.14vw, 2.188rem);
+
         span {
             background: linear-gradient(158deg, #f86cf8 0%, #64cef5 100%);
             background-clip: text;
@@ -377,10 +458,46 @@ body {
         a {
             border-radius: 5px;
             padding: toRem(12) toRem(18.5);
-            background: linear-gradient(158deg, #d10ed1 0%, #10a3da 100%);
+
             font-family: "Poppins", sans-serif;
             font-weight: 500;
             font-size: toRem(18);
+            position: relative;
+            &:after {
+                content: "";
+                position: absolute;
+                background: linear-gradient(158deg, #d10ed1 0%, #10a3da 100%);
+                width: 100%;
+                height: 100%;
+                inset: 0;
+                z-index: -1;
+                transition: all 0.5s;
+                border-radius: 5px;
+            }
+            &:before {
+                content: "";
+                position: absolute;
+                background: linear-gradient(158deg, #b12b6a 0%, #3ec955 100%);
+                width: 100%;
+                height: 100%;
+                inset: 0;
+                z-index: -2;
+                border-radius: 5px;
+            }
+            &:hover {
+                &:after {
+                    opacity: 0;
+                }
+
+                .page-about__title {
+                    span {
+                        background: linear-gradient(158deg, #d8a4bc 0%, #7cd48b 100%);
+                        background-clip: text;
+                        -webkit-background-clip: text;
+                        -webkit-text-fill-color: transparent;
+                    }
+                }
+            }
         }
     }
 }
@@ -438,6 +555,8 @@ body {
         max-width: toRem(374);
         background-color: #090823;
         padding: toRem(20) toRem(19) toRem(37) toRem(19);
+        position: relative;
+        z-index: 2;
     }
     &__item-title {
         font-family: "Orbitron", sans-serif;
@@ -452,10 +571,16 @@ body {
         margin-bottom: toRem(23);
         max-width: toRem(335);
         width: 100%;
+        overflow: hidden;
+        border-radius: 0 15px 0 0;
+
         img {
-            border-radius: 0 15px 0 0;
+            transition: transform 0.3s;
             object-fit: cover;
             width: 100%;
+            &:hover {
+                transform: scale(1.1);
+            }
         }
     }
 
@@ -475,8 +600,35 @@ body {
             font-weight: 500;
             font-size: toRem(16);
             padding: toRem(12) toRem(20);
-            background: linear-gradient(158deg, #d10ed1 0%, #10a3da 100%);
+            position: relative;
             border-radius: 5px;
+
+            &:after {
+                content: "";
+                position: absolute;
+                background: linear-gradient(158deg, #d10ed1 0%, #10a3da 100%);
+                width: 100%;
+                height: 100%;
+                inset: 0;
+                z-index: -1;
+                transition: all 0.5s;
+                border-radius: 5px;
+            }
+            &:before {
+                content: "";
+                position: absolute;
+                background: linear-gradient(158deg, #b12b6a 0%, #3ec955 100%);
+                width: 100%;
+                height: 100%;
+                inset: 0;
+                z-index: -2;
+                border-radius: 5px;
+            }
+            &:hover {
+                &:after {
+                    opacity: 0;
+                }
+            }
         }
     }
 
@@ -488,18 +640,36 @@ body {
             border-radius: 5px;
             padding: toRem(12) toRem(14);
             border: 2px solid #d10ed1;
+            transition: border 0.5s;
+            &:hover {
+                border: 2px solid #966f1c;
+            }
         }
     }
 }
 .page-video {
     // .page-video__text
+    margin-bottom: clamp(2.813rem, -4.2rem + 24.93vw, 14.5rem);
+    position: relative;
+    &__decor {
+        background: radial-gradient(50.5% 39.56% at 50% 50%, rgba(160, 54, 209, 0.28), rgba(170, 20, 240, 0) 100%);
+        // background: #7c6666;
+        
+        position: absolute;
+        width: 45rem;
+        height: 45rem;
+        bottom: 50%;
+        right: 70%;
 
+        z-index: -1;
+    }
     &__text {
         display: flex;
         flex-direction: column;
         align-items: center;
         margin: 0 auto toRem(55);
         max-width: toRem(561);
+        position: relative;
     }
 
     // .page-video__title
@@ -509,6 +679,7 @@ body {
         font-weight: 600;
         font-size: toRem(35);
         margin-bottom: toRem(16);
+        text-align: center;
         span {
             background: linear-gradient(158deg, #f86cf8 0%, #64cef5 100%);
             background-clip: text;
@@ -544,27 +715,31 @@ body {
         width: 100%;
         height: 100%;
         position: absolute;
+
         img {
             width: 100%;
             height: 100%;
             border-radius: 30px;
             object-fit: cover;
+            border: 2px solid #f86cf8;
         }
     }
 
     // .page-video__play
 
     &__play {
-        button {
+        button,
+        a {
             width: 120px;
             height: 120px;
             border-radius: 100%;
             border: 1px solid #fff;
             backdrop-filter: blur(10px);
-            
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
 
-       
         position: absolute;
         z-index: 10;
         top: 0;
@@ -574,10 +749,9 @@ body {
         justify-content: center;
         align-items: center;
     }
-    &__text-item{
+    &__text-item {
         position: relative;
-        padding: toRem(497) 0 0 0;
-        
+        padding: clamp(12.5rem, 1.362rem + 39.6vw, 31.063rem) 0 0 0;
     }
 
     // .page-video__name
@@ -586,14 +760,93 @@ body {
         backdrop-filter: blur(10px);
         font-family: "Poppins", sans-serif;
         font-weight: 600;
-        font-size: toRem(45);
-        padding: toRem(44) 0 toRem(53) toRem(50);
-        
+        font-size: clamp(1.625rem, 0.913rem + 2.53vw, 2.813rem);
+        padding: clamp(1.563rem, 0.85rem + 2.53vw, 2.75rem) 0 clamp(1.563rem, 0.512rem + 3.73vw, 3.313rem) toRem(50);
+        border-radius: 30px;
     }
 }
-.swiper-wrapper {
-}
-.swiper-slide {
+
+.footer {
+    background-color: #090823;
+    // .footer__container
+
+    &__container {
+        display: flex;
+        justify-content: space-between;
+        flex-wrap: wrap;
+
+        gap: toRem(20);
+        padding: toRem(57) toRem(15) toRem(170) toRem(15);
+    }
+
+    // .footer__logo
+
+    &__logo {
+        display: flex;
+        flex-direction: column;
+        row-gap: toRem(23);
+        max-width: toRem(424);
+    }
+
+    // .footer__title
+
+    &__title {
+        font-family: "Orbitron", sans-serif;
+        font-weight: 700;
+        font-size: toRem(50);
+        background: linear-gradient(158deg, #f86cf8 0%, #64cef5 100%);
+        background-clip: text;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+    }
+
+    // .footer__paragraph
+
+    &__paragraph {
+        color: rgba(255, 255, 255, 0.8);
+        line-height: 167%;
+    }
+
+    // .footer__about
+
+    &__about,
+    &__services {
+        ol {
+            display: flex;
+            flex-direction: column;
+            row-gap: toRem(8);
+        }
+    }
+
+    &__list-title {
+        font-family: "Orbitron", sans-serif;
+        font-weight: 700;
+        font-size: 20px;
+        color: #fff;
+        margin-bottom: toRem(13);
+    }
+    // .footer__contact
+
+    &__contact {
+        ol {
+            display: flex;
+            flex-direction: column;
+            max-width: toRem(263);
+            row-gap: toRem(24);
+        }
+    }
+
+    // .footer__social
+
+    &__social {
+        display: flex;
+        column-gap: toRem(21);
+        img {
+            &:hover {
+                transform: scale(1.1);
+            }
+        }
+    }
 }
 
 .paragraph {
