--- a/metav/scss/style.css
+++ b/metav/scss/style.css
@@ -94,9 +94,8 @@ body {
 }
 
 .header {
-  margin-top: 2.8125rem;
-  margin-bottom: clamp(1.25rem, 0.159rem + 5.45vw, 4.25rem);
   position: relative;
+  margin-bottom: clamp(1.25rem, 0.159rem + 5.45vw, 4.25rem);
 }
 .header__decor {
   background: radial-gradient(40.5% 39.56% at 50% 50%, rgba(170, 20, 240, 0.28), rgba(170, 20, 240, 0) 100%);
@@ -110,6 +109,7 @@ body {
           transform: translateY(-28.125rem);
 }
 .header__container {
+  margin-top: 2.8125rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -486,39 +486,86 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  position: relative;
 }
 .page-about__frist-img {
-  width: 100%;
   height: 100%;
+  width: 100%;
   position: relative;
-  z-index: 2;
+  z-index: 4;
+  inset: 0;
+}
+.page-about__frist-img:before {
+  content: "";
+  position: absolute;
+  width: 105%;
+  height: 105%;
+  z-index: 1;
+  background: linear-gradient(158.4deg, #8c43d4 10.9%, #10a3da 88.221%);
+  border-bottom-left-radius: 4.0625rem;
+  border-top-right-radius: 4.0625rem;
+}
+.page-about__frist-img:after {
+  content: "";
+  position: absolute;
+  width: 104%;
+  height: 104%;
+  z-index: 5;
+  left: 2px;
+  top: 2px;
+  background: #000;
+  border-bottom-left-radius: 4.0625rem;
+  border-top-right-radius: 4.0625rem;
 }
 .page-about__frist-img img {
   border-bottom-left-radius: 4.0625rem;
   border-top-right-radius: 4.0625rem;
   width: 100%;
   height: 100%;
-  aspect-ratio: 282/297;
-  -o-object-fit: cover;
-     object-fit: cover;
+  left: 2%;
+  top: 8px;
   position: relative;
-  z-index: 5;
+  z-index: 6;
 }
 .page-about__second-img {
   width: 100%;
   height: 100%;
   position: relative;
   margin-top: 7.6875rem;
-  margin-left: -3.5rem;
-  z-index: 100;
+  -webkit-transform: translateX(-3.5rem);
+      -ms-transform: translateX(-3.5rem);
+          transform: translateX(-3.5rem);
+}
+.page-about__second-img:before {
+  content: "";
+  position: absolute;
+  width: 105%;
+  height: 105%;
+  z-index: 1;
+  background: linear-gradient(158.4deg, #8c43d4 10.9%, #10a3da 88.221%);
+  border-bottom-right-radius: 4.0625rem;
+  border-top-left-radius: 4.0625rem;
+}
+.page-about__second-img:after {
+  content: "";
+  position: absolute;
+  width: 104%;
+  height: 104%;
+  z-index: 2;
+  left: 1px;
+  top: 1px;
+  background: #000;
+  border-bottom-right-radius: 4.0625rem;
+  border-top-left-radius: 4.0625rem;
 }
 .page-about__second-img img {
   border-bottom-right-radius: 4.0625rem;
   border-top-left-radius: 4.0625rem;
   position: relative;
-  aspect-ratio: 282/297;
-  z-index: 2;
+  width: 100%;
+  left: 2%;
+  top: 7px;
+  height: 100%;
+  z-index: 3;
 }
 .page-about__right-content {
   max-width: 32.8125rem;
