--- a/metav/scss/style.scss
+++ b/metav/scss/style.scss
@@ -26,6 +26,7 @@ body {
 }
 
 .header {
+    position: relative;
     &__decor {
         background: radial-gradient(40.5% 39.56% at 50% 50%, rgba(170, 20, 240, 0.28), rgba(170, 20, 240, 0) 100%);
         width: 56rem;
@@ -36,11 +37,12 @@ body {
         transform: translateY(toRem(-450));
     }
     // .header__container
-    margin-top: toRem(45);
+    
     margin-bottom: clamp(1.25rem, 0.159rem + 5.45vw, 4.25rem);
-    position: relative;
+    
     
     &__container {
+        margin-top: toRem(45);
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -374,25 +376,52 @@ body {
     // .page-about__img
     &__img {
         display: flex;
-        position: relative;
+    
+
     }
 
     // .page-about__frist-img
 
     &__frist-img {
-        width: 100%;
         height: 100%;
+        width: 100%;
         position: relative;
-        z-index: 2;
+        z-index: 4;
+        inset: 0;
+        &:before{
+            content: "";
+            position: absolute;
+            width: 105%;
+            height: 105%;
+            z-index: 1;
+            background: linear-gradient(158.4deg,#8c43d4 10.9%,#10a3da 88.221%);
+            border-bottom-left-radius: toRem(65);
+            border-top-right-radius: toRem(65);
+        }
+        &:after{
+            content: "";
+            position: absolute;
+            width: 104%;
+            height: 104%;
+            
+            z-index: 5;
+            left: 2px;
+            top: 2px;
+            background: #000;
+            border-bottom-left-radius: toRem(65);
+            border-top-right-radius: toRem(65);
+        }
+        
         img {
             border-bottom-left-radius: toRem(65);
             border-top-right-radius: toRem(65);
             width: 100%;
             height: 100%;
-            aspect-ratio: 282/297;
-            object-fit: cover;
+            left: 2%;
+            top: 8px;
             position: relative;
-            z-index: 5;
+            z-index: 6;
+            
         }
     }
 
@@ -402,19 +431,44 @@ body {
         width: 100%;
         height: 100%;
         position: relative;
+       
+        &:before{
+            content: "";
+            position: absolute;
+            width: 105%;
+            height: 105%;
+            z-index: 1;
+            background: linear-gradient(158.4deg,#8c43d4 10.9%,#10a3da 88.221%);
+            border-bottom-right-radius: toRem(65);
+            border-top-left-radius: toRem(65);
+        }
+        &:after{
+            content: "";
+            position: absolute;
+            width: 104%;
+            height: 104%;
+            
+            z-index: 2;
+            left: 1px;
+            top: 1px;
+            background: #000;
+            border-bottom-right-radius: toRem(65);
+            border-top-left-radius: toRem(65);
+        }
 
         img {
             border-bottom-right-radius: toRem(65);
             border-top-left-radius: toRem(65);
             position: relative;
-            aspect-ratio: 282/297;
-
-            z-index: 2;
+            width: 100%;
+            left: 2%;
+            top: 7px;
+            height: 100%;
+            z-index: 3;
         }
         margin-top: toRem(123);
-        margin-left: toRem(-56);
-
-        z-index: 100;
+        // margin-left: toRem(-56);
+        transform: translateX(toRem(-56));
     }
 
     // .page-about__right-content
