--- a/metav/scss/style.css
+++ b/metav/scss/style.css
@@ -90,7 +90,6 @@ body {
   max-width: 75rem;
   padding: 0 0.9375rem;
   margin: 0 auto;
-  border: 1px solid #fff;
 }
 
 .header {
@@ -103,13 +102,15 @@ body {
   height: 56rem;
   position: absolute;
   z-index: -1;
-  left: 26.25rem;
+  left: 0;
+  right: 0;
+  top: 0;
   -webkit-transform: translateY(-28.125rem);
       -ms-transform: translateY(-28.125rem);
           transform: translateY(-28.125rem);
 }
 .header__container {
-  margin-top: 2.8125rem;
+  padding-top: 2.8125rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -246,11 +247,8 @@ body {
   height: 56rem;
   position: absolute;
   z-index: -1;
-  -webkit-transform: translate(18.75rem, -6.25rem);
-      -ms-transform: translate(18.75rem, -6.25rem);
-          transform: translate(18.75rem, -6.25rem);
-  top: 0;
   right: 0;
+  bottom: 10%;
 }
 
 .page-home {
@@ -479,8 +477,8 @@ body {
   height: 56rem;
   position: absolute;
   z-index: -1;
-  bottom: 0;
-  right: 0;
+  bottom: 10%;
+  right: 70%;
 }
 .page-about__img {
   display: -webkit-box;
@@ -530,6 +528,7 @@ body {
   width: 100%;
   height: 100%;
   position: relative;
+  z-index: 7;
   margin-top: 7.6875rem;
   -webkit-transform: translateX(-3.5rem);
       -ms-transform: translateX(-3.5rem);
