--- a/metav/scss/style.scss
+++ b/metav/scss/style.scss
@@ -14,6 +14,7 @@ body {
     overflow: clip;
     min-height: 100vh;
     width: 100vw;
+    
 
 }
 
@@ -21,7 +22,7 @@ body {
     max-width: toRem(1200);
     padding: 0 toRem(15);
     margin: 0 auto;
-    border: 1px solid #fff;
+   
     
 }
 
@@ -33,7 +34,11 @@ body {
         height: 56rem;
         position: absolute;
         z-index: -1;
-        left: toRem(420);
+        // left: toRem(420);
+        left: 0;
+        right: 0;
+        top: 0;
+        // right: 0;
         transform: translateY(toRem(-450));
     }
     // .header__container
@@ -42,7 +47,7 @@ body {
     
     
     &__container {
-        margin-top: toRem(45);
+        padding-top: toRem(45);
         display: flex;
         justify-content: space-between;
         align-items: center;
@@ -161,9 +166,12 @@ body {
     height: 56rem;
     position: absolute;
     z-index: -1;
-    transform: translate(toRem(300), toRem(-100));
-    top: 0;
+    
+    
     right: 0;
+    
+    bottom: 10%;
+    
 }
 
 .page-home {
@@ -370,8 +378,8 @@ body {
         height: 56rem;
         position: absolute;
         z-index: -1;
-        bottom: 0;
-        right: 0;
+        bottom: 10%;
+        right: 70%;
     }
     // .page-about__img
     &__img {
@@ -431,6 +439,7 @@ body {
         width: 100%;
         height: 100%;
         position: relative;
+        z-index: 7;
        
         &:before{
             content: "";
